fix: address code review feedback (cloudbuild comment, configurable CORS headers)
Agent-Logs-Url: https://github.com/nexthome-live/nextHome/sessions/7366ce52-059b-438f-87b3-1ddcc4935e3c

Co-authored-by: raveendra11 <72726513+raveendra11@users.noreply.github.com>